# modorganizer-installer_omod

./: CMakeLists.txt  DummyCSFile.cs
src/: CMakeLists.txt  DummyCSFile.cs  MessageBoxHelper.cpp  MessageBoxHelper.h  OMODFrameworkWrapper.cpp  OMODFrameworkWrapper.h  QObject_unique_ptr.h  installerOmod.cpp  installerOmod.h  installer_omod_en.ts
src/implementations/: CodeProgress.cpp  CodeProgress.h  Logger.cpp  Logger.h  ScriptFunctions.cpp  ScriptFunctions.h
src/interop/: QtDotNetConverters.cpp  QtDotNetConverters.h  StdDotNetConverters.cpp  StdDotNetConverters.h
src/newstuff/: namedialog.cpp  namedialog.h  namedialog.ui  rtfPopup.cpp  rtfPopup.h
src/oldstuff/: DialogSelect.cpp  DialogSelect.h  folder.md
src/oldstuff/MIT-licencedCodeToDoStuff/: LICENSE  checkboxwordwrap.cpp  checkboxwordwrap.h
